css/styles.css
/* ... */
.menu{
	position: relative;
	right: 15px;
	float: right;
	padding-right: 20px;
	margin-top: 22px;
	color: white;
	font-weight: bold;
	text-decoration: none;
	z-index: 2;
	padding-left: 12px;
	padding-right: 12px;
	line-height: 30px;
}
.menu_blue
{
	color: rgba(44, 70, 98, 0.55);
}
.menu:hover{
	color: #dddddd;
	text-decoration: underline;
}
.menu_blue:hover
{
	color: rgb(44, 70, 98);
}

#login
{
	border:1px solid white;
    border-radius: 4px;
    margin-top: 21px;
    line-height: 30px;
    padding-left: 15px;
    padding-right: 15px;
	margin-left: 12px;
}
#login_blue, .button
{
	border:1px solid rgba(44, 70, 98, 0.55);
    border-radius: 4px;
    margin-top: 21px;
    line-height: 30px;
    padding-left: 15px;
    padding-right: 15px;
	margin-left: 12px;
}
#login:hover{
	background: white;
	text-decoration: none;
	color: black;
	
}
#login_blue:hover{
	background: rgba(44, 70, 98, 0.55);
	text-decoration: none;
	color: white;
	
}
.selected
{
    color: rgb(44, 70, 98);
}

/*/END////////////////////////////////////////		NAVIGATION MENU(<div id="nav"><a/></>)	////////////////////////////////////////////////////////////////////*/

/*/START////////////////////////////////////////		CONTENT BACKGROUND(<div id="content_base">CONTENT</>)	////////////////////////////////////////////////////////////////////*/
#content_base
{

	min-height:600px;
	height: 100%;
	margin: auto auto;
	width: 100%;

}
#content_start
{
	background-image: url("../images/background2.gif");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 50% 70%;
	display: block;
	height: 100vh;
	width: 100%;
	position: absolute;
	left: 0px;
	top: 0px;    
}
//#content_start::after
{
    content: " ";
    background: rgba(255,255,255, 0.3);
    display: block;
	height: 100%;
	width: 100%;
	position: absolute;
	left: 0px;
	top: 0px; 
    z-index: 0;
}
#by_start
{
	color: #ddd;
    z-index: 2;
    position: relative;
}
/*/START////////////////////////////////////////		PAGE CONTENT(<div id="content">CONTENT</>)	////////////////////////////////////////////////////////////////////*/
#text_start
{
	font-family: 'Montserrat', sans-serif;
	color: white;
	font-weight: bold;
	font-size: 2vw;
	margin-top: 50vh;
    z-index: 2;
    position: relative;
}

@media only screen and (max-width: 1080px) {
	#text_start
	{
	font-size: 21.5px;
	}
}

@media only screen and (min-width: 1920px)
{
	#text_start
	{
		font-size: 38.34px;
	}
}
#content
{
    
	height: 100%;
	text-align: center;
    width: 600px;
    margin: 0 auto;
    margin-top: 10px;
}

#delivery_text
{
   position: relative;
   left: 23px;
}

#form
{
    margin-top: 91px;
}
#signin_form
{
    text-align: center;
    float: left;
    width: 200px;
}

#signup_form
{
    float: right;
    text-align: center;
    width: 290px;
}
#separator
{
    position: relative;
    bottom: 45px;
    height:300px;
    display: inline-block;
    width: 2px;
    background: #dddddd;
     width : 2px;
  background-image: -webkit-linear-gradient(top, #f8f9fa, #dddddd, #f8f9fa);
  background-image: -moz-linear-gradient(top, #f8f9fa, #dddddd, #f8f9fa);
  background-image: -ms-linear-gradient(top, #f8f9fa, #ddddddd, #f8f9fa);
  background-image: -o-linear-gradient(top, #f8f9fa, #dddddd, #f8f9fa);
  background-image: linear-gradient(top, #f8f9fa, #dddddd, #f8f9fa);
}
#username_input, #password_input
{
    position: relative;
    margin-bottom: 20px;
    clear: both;
}

.input_text
{
    margin-bottom: 20px;
    width: 140px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    padding: 10px;
    font-family: Arial;
}

.dropdown_number
{
    text-align-last: center;
    margin-bottom: 20px;
    width: 70px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    padding: 5px;
    font-family: Arial;
    margin-left: 0;
}

#packageNumber
{
    text-align: right;
}
.input_text[type="date"], .input_text[type="time"]
{
    height: 15px;
}

.textarea
{
    resize: none;
    height: 15px;
    width: 175px;
    font-size: 12px;
    transition: height 0.1s linear,
                width 0.1s linear;
}

.textarea_height:focus
{
    height: 60px;
}
.textarea_width
{
    width: 442px;
}

.text_long{
    height: 60px;
}

.textarea_short
{
    width: 140px;
}

#complaint
{
    height: 250px;
    width: 500px;
}
.input_label
{
    white-space: nowrap;
}

#left
{
    float: left;
    width: 24%;
}
#left_wide
{
    float: left;
    width: 360px;
    height: 230px;
}

.left
{
    float: left;
}

#right
{
    float: right;
    width: 24%;
}

#right_wide
{
    float: right;
    width: 240px;
    height: 230px;
}

.right
{
    float: right;
    position: relative;
    bottom: 14px;
}

.right_no_bottom
{
    float: right;
    top: 2px;
}

#bottom
{
    width: 562px;
}
#bottom_wide
{
    width: 633px;
    margin-left: -37px;
    overflow: hidden;
}
.button
{
    background: #568FCF;
    margin: 0;
    color: white;
    border-color: #568FCF;
    font-family: arial;
    cursor: pointer;
    position: relative;
    font-weight: bold;
}
#signup_form .button
{
    background: #568FCF;
    margin: 0;
    color: white;
    border-color: #568FCF;
    font-family: arial;
    cursor: pointer;
    position: relative;
    left: 87%;
}
#signin_form .button
{
    left: 0;
}

#numberInput::-webkit-outer-spin-button,
#numberInput::-webkit-inner-spin-button 
{
    -webkit-appearance: none;
    margin: 0;
}

.button:hover
{
    background: #387bc7;
    border-color: #387bc7;
}
.button_white
{
    border: 1px solid rgba(44, 70, 98, 0.55);
    border-radius: 4px;
    line-height: 30px;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: 12px;
    background-color: white;
    color: rgba(44, 70, 98, 0.55);
}

label.button_white 
{
    height: 35px;
    display: block;
    line-height: 35px;
    position: relative;
    bottom: 117px;
    width: 130px;
    margin: 0px auto 20px auto;
    text-align: left;
    border: 1px solid rgba(0, 0, 0, 0.1);
    color: rgb(169, 169, 169);
    
}
/* ... */

